--- a/css/main.css
+++ b/css/main.css
@@ -30,10 +30,33 @@ body {
 
 }
 
+
 .container{
     width: 90vw;
     max-width: 500px ;
     background-color: #cecece;
     display: grid;
-    
+    grid-template-columns: repeat(4 , 1fr);
+    grid-template-rows: repeat(8 , 2fr);
+    padding: 10px;
+   
 }
+
+.header{
+    grid-row: 1 / 1 ;
+    grid-column: 1 / 5;
+}
+
+.previousvalue{
+    grid-row: 2 / 2;
+    grid-column: 1 / 5 ;
+}
+
+.currentvalue{
+    grid-row: 3 / 4;
+    grid-column: 1 / 5;
+
+}
+
+
+
