--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,8 @@
 html {
     font-size: 16px;
     font-family: "Roboto Mono", monospace;
-    color: #f0f;  
-    
+    color: #252525;  
+    text-align: center;    
 }
 
 body {
@@ -31,32 +31,87 @@ body {
 }
 
 
-.container{
+.container {
     width: 90vw;
     max-width: 500px ;
     background-color: #cecece;
     display: grid;
+    gap: 10px;
     grid-template-columns: repeat(4 , 1fr);
     grid-template-rows: repeat(8 , 2fr);
     padding: 10px;
-   
+    border-radius: 15px;
+    
 }
 
-.header{
+.container:focus-within {
+    background-color: seagreen;
+}
+
+.header {
     grid-row: 1 / 1 ;
     grid-column: 1 / 5;
 }
 
-.previousvalue{
-    grid-row: 2 / 2;
-    grid-column: 1 / 5 ;
+.header > h1 {
+    font-family:'Times New Roman', Times, serif;
+    font-size: 0.85rem;
+
+    
 }
 
-.currentvalue{
+
+.previousvalue {
+    grid-row: 2 / 2;
+    grid-column: 1 / 5 ;
+
+    display: flex;
+    justify-content: flex-end;
+}
+
+.currentvalue {
     grid-row: 3 / 4;
     grid-column: 1 / 5;
 
+    font-size: 3rem;
+    font-weight: bolder;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    text-align: right;
+    font-family: "Roboto Mono" , monospace;
+
+}
+
+button {
+    display: grid;
+    place-content: center;
+    width: 100%;
+    font-size: 1.5rem;
+    padding: 0.5rem;
+    background-color: whitesmoke;
+    border-radius: 15px;
+    outline: none;
+
+}
+
+button:hover , 
+button:active {
+    background-color: rgb(163, 248, 6);
+}
+
+.function{
+    background-color: #e5a5d5;
 }
 
 
+.equals {
+    background-color: rgb(70,130,180);
+}
+
+.equals:hover,
+.equals:active{
+    background-color: sandybrown;
+    filter: brightness(120%);
+}
 
